fixing bug with gap in politics

--- a/app/scss/blocks/politic.scss
+++ b/app/scss/blocks/politic.scss
@@ -1,7 +1,7 @@
 .politic {
   .grid {
     display: grid;
-    gap: 20px;
+    grid-gap: 20px;
 
     &__row:first-child {
       display: grid;
